# business-sql-assistant

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_pipeline.yml
scripts/: check_tables.py
src/: agent.py  app.py  database.py  main.py
tests/: test_security.py
